# shallow-rm-numerics

./: .gitignore  CITATION.cff  DATA_AVAILABILITY.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: fig2_derandomization.yaml  fig3_fidelity.yaml  fig3_purity.yaml  fig5_ml.yaml
scripts/: run_fig2_derandomization.py  run_fig3_fidelity.py  run_fig3_purity.py  run_fig5_ml.py
src/shallow_rm_numerics/: __init__.py  config.py  derandomization.py  dmrg.py  fidelity.py  ml_shadow.py  mps.py  pauli.py  purity.py  qiskit_helpers.py  random_utils.py
